@@ -1,452 +1,391 @@
 package ledance.servicios.pago;
 
-import ledance.dto.pago.DetallePagoMapper;
-import ledance.dto.pago.PagoMapper;
-import ledance.dto.pago.request.DetallePagoRegistroRequest;
+import jakarta.persistence.EntityNotFoundException;
+import ledance.dto.pago.request.AplicacionPagoRequest;
+import ledance.dto.pago.request.PagoAnulacionRequest;
 import ledance.dto.pago.request.PagoRegistroRequest;
+import ledance.dto.pago.response.AplicacionPagoResponse;
 import ledance.dto.pago.response.PagoResponse;
-import ledance.dto.cobranza.CobranzaDTO;
-import ledance.dto.cobranza.DetalleCobranzaDTO;
-import ledance.entidades.*;
-import ledance.repositorios.*;
-import jakarta.transaction.Transactional;
-import ledance.servicios.detallepago.DetallePagoServicio;
-import ledance.servicios.pdfs.ReciboStorageService;
+import ledance.entidades.Alumno;
+import ledance.entidades.AplicacionPago;
+import ledance.entidades.Cargo;
+import ledance.entidades.EstadoAplicacionPago;
+import ledance.entidades.EstadoCargo;
+import ledance.entidades.EstadoPago;
+import ledance.entidades.EstadoRecibo;
+import ledance.entidades.EstadoReciboPendiente;
+import ledance.entidades.MetodoPago;
+import ledance.entidades.MovimientoCaja;
+import ledance.entidades.MovimientoCredito;
+import ledance.entidades.Pago;
+import ledance.entidades.Recibo;
+import ledance.entidades.ReciboPendiente;
+import ledance.entidades.TipoEfectoRecibo;
+import ledance.entidades.TipoMovimientoCaja;
+import ledance.entidades.TipoMovimientoCredito;
+import ledance.entidades.Usuario;
+import ledance.infra.errores.TratadorDeErrores.OperacionNoPermitidaException;
+import ledance.repositorios.AlumnoRepositorio;
+import ledance.repositorios.AplicacionPagoRepositorio;
+import ledance.repositorios.CargoRepositorio;
+import ledance.repositorios.MetodoPagoRepositorio;
+import ledance.repositorios.MovimientoCajaRepositorio;
+import ledance.repositorios.MovimientoCreditoRepositorio;
+import ledance.repositorios.PagoRepositorio;
+import ledance.repositorios.ReciboPendienteRepositorio;
+import ledance.repositorios.ReciboRepositorio;
+import ledance.repositorios.UsuarioRepositorio;
+import ledance.servicios.cargo.CargoServicio;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+import java.math.BigDecimal;
+import java.math.RoundingMode;
+import java.nio.charset.StandardCharsets;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
 import java.time.Clock;
 import java.time.LocalDate;
-import java.util.*;
-import java.util.function.Function;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.HashSet;
+import java.util.HexFormat;
+import java.util.List;
 
 @Service
 public class PagoServicio {
-
     private static final Logger log = LoggerFactory.getLogger(PagoServicio.class);
+    private static final BigDecimal CERO = new BigDecimal("0.00");
 
-    private final PagoRepositorio pagoRepositorio;
-    private final AlumnoRepositorio alumnoRepositorio;
-    private final MetodoPagoRepositorio metodoPagoRepositorio;
-    private final PagoMapper pagoMapper;
-    private final RecargoRepositorio recargoRepositorio;
-    private final BonificacionRepositorio bonificacionRepositorio;
-
-    // Servicios para delegar la logica de calculo y procesamiento
-    private final DetallePagoServicio detallePagoServicio;
-    private final PaymentProcessor paymentProcessor;
-    private final DetallePagoMapper detallePagoMapper;
-    private final SubConceptoRepositorio subConceptoRepositorio;
-    private final ConceptoRepositorio conceptoRepositorio;
-    private final ReciboStorageService reciboStorageService;
-    private final UsuarioRepositorio usuarioRepositorio;
+    private final PagoRepositorio pagos;
+    private final CargoRepositorio cargos;
+    private final AplicacionPagoRepositorio aplicaciones;
+    private final AlumnoRepositorio alumnos;
+    private final MetodoPagoRepositorio metodos;
+    private final UsuarioRepositorio usuarios;
+    private final MovimientoCajaRepositorio movimientosCaja;
+    private final MovimientoCreditoRepositorio movimientosCredito;
+    private final ReciboRepositorio recibos;
+    private final ReciboPendienteRepositorio recibosPendientes;
     private final Clock clock;
+    private final CargoServicio cargoServicio;
 
-    public PagoServicio(AlumnoRepositorio alumnoRepositorio,
-                        PagoRepositorio pagoRepositorio,
-                        MetodoPagoRepositorio metodoPagoRepositorio,
-                        PagoMapper pagoMapper,
-                        DetallePagoMapper detallePagoMapper,
-                        RecargoRepositorio recargoRepositorio,
-                        BonificacionRepositorio bonificacionRepositorio,
-                        DetallePagoServicio detallePagoServicio,
-                        PaymentProcessor paymentProcessor,
-                        SubConceptoRepositorio subConceptoRepositorio,
-                        ConceptoRepositorio conceptoRepositorio, ReciboStorageService reciboStorageService,
-                        UsuarioRepositorio usuarioRepositorio, Clock clock) {
-        this.alumnoRepositorio = alumnoRepositorio;
-        this.pagoRepositorio = pagoRepositorio;
-        this.metodoPagoRepositorio = metodoPagoRepositorio;
-        this.pagoMapper = pagoMapper;
-        this.recargoRepositorio = recargoRepositorio;
-        this.bonificacionRepositorio = bonificacionRepositorio;
-        this.detallePagoServicio = detallePagoServicio;
-        this.paymentProcessor = paymentProcessor;
-        this.detallePagoMapper = detallePagoMapper;
-        this.subConceptoRepositorio = subConceptoRepositorio;
-        this.conceptoRepositorio = conceptoRepositorio;
-        this.reciboStorageService = reciboStorageService;
-        this.usuarioRepositorio = usuarioRepositorio;
+    public PagoServicio(PagoRepositorio pagos,
+                        CargoRepositorio cargos,
+                        AplicacionPagoRepositorio aplicaciones,
+                        AlumnoRepositorio alumnos,
+                        MetodoPagoRepositorio metodos,
+                        UsuarioRepositorio usuarios,
+                        MovimientoCajaRepositorio movimientosCaja,
+                        MovimientoCreditoRepositorio movimientosCredito,
+                        ReciboRepositorio recibos,
+                        ReciboPendienteRepositorio recibosPendientes,
+                        CargoServicio cargoServicio,
+                        Clock clock) {
+        this.pagos = pagos;
+        this.cargos = cargos;
+        this.aplicaciones = aplicaciones;
+        this.alumnos = alumnos;
+        this.metodos = metodos;
+        this.usuarios = usuarios;
+        this.movimientosCaja = movimientosCaja;
+        this.movimientosCredito = movimientosCredito;
+        this.recibos = recibos;
+        this.recibosPendientes = recibosPendientes;
+        this.cargoServicio = cargoServicio;
         this.clock = clock;
     }
 
-    /**
-     * Registra un nuevo pago o procesa un abono parcial segun el ultimo pago activo del alumno.
-     * Selecciona entre crear un pago nuevo, procesar abono parcial o reutilizar el pago activo.
-     */
-    public PagoResponse registrarPago(PagoRegistroRequest request) {
-        Alumno alumnoPersistido = alumnoRepositorio.findByIdAndActivoTrue(request.alumno().id())
-                .orElseThrow(() -> new IllegalStateException(
-                        "Alumno activo no encontrado para ID: " + request.alumno().id()));
-        Pago ultimoPagoActivo = paymentProcessor.obtenerUltimoPagoPendienteEntidad(alumnoPersistido.getId());
-
-        Pago pagoFinal;
-        if (ultimoPagoActivo == null) {
-            pagoFinal = crearNuevoPago(alumnoPersistido, request);
-            actualizarDatosPagoDesdeRequest(pagoFinal, request);
-        } else if (esAbonoParcial(ultimoPagoActivo)) {
-            pagoFinal = paymentProcessor.procesarAbonoParcial(ultimoPagoActivo, request);
-            actualizarDatosPagoDesdeRequest(pagoFinal, request);
-        } else {
-            pagoFinal = ultimoPagoActivo;
+    @Transactional
+    public PagoResponse registrarPago(PagoRegistroRequest request, Usuario principal) {
+        String hash = hash(request);
+        Pago previo = pagos.findByIdempotencyKey(request.idempotencyKey()).orElse(null);
+        if (previo != null) {
+            return validarReintento(previo, hash);
         }
 
-        paymentProcessor.asignarMetodoYPersistir(
-                pagoFinal,
-                request.metodoPagoId(),
-                request.recargoMetodoPagoAplicado()
-        );
+        Alumno alumno = alumnos.findActivoByIdForUpdate(request.alumnoId())
+                .orElseThrow(() -> new OperacionNoPermitidaException("El alumno no existe o está inactivo"));
 
-        PagoResponse response = pagoMapper.toDTO(pagoFinal);
-        if (!pagoFinal.getMetodoPago().getDescripcion().equalsIgnoreCase("DEBITO") && pagoFinal.getMonto() > 0) {
-            reciboStorageService.generarYAlmacenarYEnviarRecibo(pagoFinal);
+        previo = pagos.findByIdempotencyKey(request.idempotencyKey()).orElse(null);
+        if (previo != null) {
+            return validarReintento(previo, hash);
         }
 
-        log.info("Pago registrado id={} para alumnoId={}", pagoFinal.getId(), alumnoPersistido.getId());
-        return response;
-    }
+        Usuario usuario = usuarioActivo(principal);
+        MetodoPago metodo = metodos.findById(request.metodoPagoId())
+                .filter(m -> Boolean.TRUE.equals(m.getActivo()))
+                .orElseThrow(() -> new OperacionNoPermitidaException("El método de pago no existe o está inactivo"));
+        BigDecimal monto = monedaPositiva(request.montoRecibido(), "montoRecibido");
 
-    /**
-     * Actualiza unicamente los campos que vienen en el request (observaciones, fechas, usuario).
-     * NO se invoca cuando se reutiliza el pago activo.
-     */
-    private void actualizarDatosPagoDesdeRequest(Pago pago, PagoRegistroRequest request) {
+        List<AplicacionPagoRequest> solicitadas = request.aplicaciones().stream()
+                .sorted(Comparator.comparing(AplicacionPagoRequest::cargoId))
+                .toList();
+        if (new HashSet<>(solicitadas.stream().map(AplicacionPagoRequest::cargoId).toList()).size() != solicitadas.size()) {
+            throw new IllegalArgumentException("Un cargo no puede repetirse en el mismo pago");
+        }
+
+        List<Cargo> cargosBloqueados = solicitadas.isEmpty()
+                ? List.of()
+                : cargos.findAllByIdForUpdate(solicitadas.stream().map(AplicacionPagoRequest::cargoId).toList());
+        if (cargosBloqueados.size() != solicitadas.size()) {
+            throw new EntityNotFoundException("Uno o más cargos no existen");
+        }
+
+        BigDecimal totalAplicado = CERO;
+        List<BigDecimal> importes = new ArrayList<>(solicitadas.size());
+        for (int i = 0; i < solicitadas.size(); i++) {
+            AplicacionPagoRequest solicitada = solicitadas.get(i);
+            Cargo cargo = cargosBloqueados.get(i);
+            if (!cargo.getId().equals(solicitada.cargoId())) {
+                throw new IllegalStateException("Los cargos no se bloquearon en orden determinista");
+            }
+            validarCargo(alumno, cargo);
+            BigDecimal importe = monedaPositiva(solicitada.importe(), "aplicaciones.importe");
+            BigDecimal saldo = cargoServicio.saldo(cargo);
+            if (importe.compareTo(saldo) > 0) {
+                throw new OperacionNoPermitidaException("La aplicación supera el saldo del cargo " + cargo.getId());
+            }
+            totalAplicado = totalAplicado.add(importe);
+            importes.add(importe);
+        }
+        if (totalAplicado.compareTo(monto) > 0) {
+            throw new OperacionNoPermitidaException("La suma aplicada supera el monto recibido");
+        }
+        BigDecimal excedente = monto.subtract(totalAplicado).setScale(2, RoundingMode.UNNECESSARY);
+        if (excedente.signum() > 0 && !request.generarCredito()) {
+            throw new OperacionNoPermitidaException("El sobrepago requiere generación explícita de crédito");
+        }
+
+        LocalDate hoy = LocalDate.now(clock);
+        Pago pago = new Pago();
+        pago.setAlumno(alumno);
+        pago.setMetodoPago(metodo);
+        pago.setUsuario(usuario);
+        pago.setFecha(hoy);
+        pago.setMontoRecibido(monto);
+        pago.setEstado(EstadoPago.REGISTRADO);
+        pago.setIdempotencyKey(request.idempotencyKey());
+        pago.setRequestHash(hash);
         pago.setObservaciones(request.observaciones());
-        pago.setFecha(request.fecha());
-        pago.setFechaVencimiento(request.fecha());
-        Usuario cobrador = usuarioRepositorio.findById(request.usuarioId())
-                .orElseThrow(() -> new IllegalArgumentException("Usuario no encontrado."));
-        pago.setUsuario(cobrador);
-    }
+        pago.setCreatedAt(clock.instant());
+        pagos.save(pago);
 
-    private boolean esAbonoParcial(Pago ultimoPagoActivo) {
-        return ultimoPagoActivo != null && ultimoPagoActivo.getSaldoRestante() > 0;
-    }
-
-    /**
-     * Crea un nuevo pago a partir del request y procesa los detalles.
-     */
-    private Pago crearNuevoPago(Alumno alumno, PagoRegistroRequest request) {
-        log.info("[crearNuevoPago] Iniciando creacion de nuevo Pago para alumno id={}", alumno.getId());
-        Pago nuevoPago = pagoMapper.toEntity(request);
-        nuevoPago.setObservaciones(request.observaciones());
-        log.info("[crearNuevoPago] Pago mapeado: fecha={}, fechaVencimiento={}, importeInicial={}",
-                nuevoPago.getFecha(), nuevoPago.getFechaVencimiento(), nuevoPago.getImporteInicial());
-
-        if (nuevoPago.getImporteInicial() == null) {
-            nuevoPago.setImporteInicial(request.importeInicial());
-            log.info("[crearNuevoPago] ImporteInicial asignado desde request: {}", request.importeInicial());
+        for (int i = 0; i < cargosBloqueados.size(); i++) {
+            Cargo cargo = cargosBloqueados.get(i);
+            AplicacionPago aplicacion = new AplicacionPago();
+            aplicacion.setPago(pago);
+            aplicacion.setCargo(cargo);
+            aplicacion.setUsuario(usuario);
+            aplicacion.setImporteAplicado(importes.get(i));
+            aplicacion.setEstado(EstadoAplicacionPago.APLICADA);
+            aplicacion.setFecha(hoy);
+            aplicaciones.save(aplicacion);
+            cargoServicio.actualizarEstado(cargo);
         }
 
-        nuevoPago.setAlumno(alumno);
-        Optional<Usuario> cobrador = usuarioRepositorio.findById(request.usuarioId());
-        nuevoPago.setUsuario(cobrador.orElseThrow(() -> new IllegalArgumentException("Usuario no encontrado.")));
+        MovimientoCaja ingreso = new MovimientoCaja();
+        ingreso.setTipo(TipoMovimientoCaja.INGRESO_PAGO);
+        ingreso.setFecha(hoy);
+        ingreso.setImporte(monto);
+        ingreso.setMetodoPago(metodo);
+        ingreso.setPago(pago);
+        ingreso.setUsuario(usuario);
+        ingreso.setIdempotencyKey("pago:" + request.idempotencyKey());
+        movimientosCaja.save(ingreso);
 
-        // 🔥 SIN COPIAR ACÁ
-        List<DetallePago> detallesFront = detallePagoMapper.toEntity(request.detallePagos());
-        if (Boolean.TRUE.equals(request.recargoMetodoPagoAplicado())) {
-            nuevoPago.setObservaciones((nuevoPago.getObservaciones() != null ? nuevoPago.getObservaciones() + "\n" : "") + "DEBITO");
+        if (excedente.signum() > 0) {
+            MovimientoCredito credito = new MovimientoCredito();
+            credito.setAlumno(alumno);
+            credito.setTipo(TipoMovimientoCredito.GENERACION);
+            credito.setImporte(excedente);
+            credito.setPago(pago);
+            credito.setUsuario(usuario);
+            credito.setIdempotencyKey("credito:" + request.idempotencyKey());
+            movimientosCredito.save(credito);
         }
-        Pago procesado = paymentProcessor.processDetallesPago(nuevoPago, detallesFront, alumno);
 
-        log.info("[crearNuevoPago] Pago procesado con detalles: {}", procesado);
-        return procesado;
+        Recibo recibo = new Recibo();
+        recibo.setPago(pago);
+        recibo.setEstado(EstadoRecibo.PENDIENTE);
+        recibos.save(recibo);
+
+        ReciboPendiente pendiente = new ReciboPendiente();
+        pendiente.setPago(pago);
+        pendiente.setTipo(TipoEfectoRecibo.GENERAR_Y_ENVIAR);
+        pendiente.setEstado(EstadoReciboPendiente.PENDIENTE);
+        pendiente.setNextAttemptAt(clock.instant());
+        recibosPendientes.save(pendiente);
+
+        log.info("Pago registrado id={} alumnoId={} aplicaciones={} credito={}",
+                pago.getId(), alumno.getId(), solicitadas.size(), decimal(excedente));
+        return respuesta(pago);
     }
 
     @Transactional
-    public PagoResponse actualizarPago(Long id, PagoRegistroRequest request) {
-        log.info("[actualizarPago] Iniciando actualizacion de pago ID: {}", id);
-        log.info("[actualizarPago] Datos de solicitud: {}", request);
-
-        log.info("[actualizarPago] Buscando pago con ID: {}", id);
-        Pago pago = pagoRepositorio.findById(id)
-                .orElseThrow(() -> {
-                    log.error("[actualizarPago] Pago no encontrado con ID: {}", id);
-                    return new IllegalArgumentException("Pago no encontrado.");
-                });
-        log.info("[actualizarPago] Pago encontrado - Estado actual: {}", pago.getEstadoPago());
-
-        log.info("[actualizarPago] Actualizando fecha de pago a: {}", request.fecha());
-        pago.setFecha(request.fecha());
-
-        log.info("[actualizarPago] Actualizando fecha de vencimiento a: {}", request.fechaVencimiento());
-        pago.setFechaVencimiento(request.fechaVencimiento());
-
-        EstadoPago nuevoEstado = request.activo() ? EstadoPago.ACTIVO : EstadoPago.ANULADO;
-        log.info("[actualizarPago] Actualizando estado de pago de {} a {}", pago.getEstadoPago(), nuevoEstado);
-        pago.setEstadoPago(nuevoEstado);
-
-        if (request.metodoPagoId() != null) {
-            log.info("[actualizarPago] Buscando metodo de pago con ID: {}", request.metodoPagoId());
-            MetodoPago metodo = metodoPagoRepositorio.findById(request.metodoPagoId())
-                    .orElseThrow(() -> {
-                        log.error("[actualizarPago] Metodo de pago no encontrado con ID: {}", request.metodoPagoId());
-                        return new IllegalArgumentException("Metodo de pago no encontrado.");
-                    });
-            log.info("[actualizarPago] Asignando metodo de pago: {}", metodo.getDescripcion());
-            pago.setMetodoPago(metodo);
-        } else {
-            log.info("[actualizarPago] No se especifico metodo de pago en la solicitud");
-        }
-
-        log.info("[actualizarPago] Actualizando detalles de pago");
-        actualizarDetallesPago(pago, request.detallePagos());
-
-        if (pago.getEstadoPago() != EstadoPago.HISTORICO) {
-            log.info("[actualizarPago] Actualizando importes del pago (no es HISTORICO)");
-            actualizarImportesPagoParcial(pago);
-            log.info("[actualizarPago] Importes actualizados - Monto: {}, Pagado: {}, Saldo: {}",
-                    pago.getMonto(), pago.getMontoPagado(), pago.getSaldoRestante());
-        } else {
-            log.info("[actualizarPago] Pago es HISTORICO, omitiendo actualizacion de importes");
-        }
-
-        log.info("[actualizarPago] Verificando saldo restante");
-        paymentProcessor.verificarSaldoRestante(pago);
-        log.info("[actualizarPago] Estado despues de verificacion: {}", pago.getEstadoPago());
-
-        log.info("[actualizarPago] Guardando cambios en el pago");
-        pago.setObservaciones(request.observaciones());
-        pagoRepositorio.save(pago);
-        log.info("[actualizarPago] Pago guardado exitosamente");
-
-        log.info("[actualizarPago] Generando respuesta DTO");
-        PagoResponse response = pagoMapper.toDTO(pago);
-        log.info("[actualizarPago] Actualizacion completada para pago ID: {}", id);
-
-        return response;
-    }
-
-    /**
-     * Actualiza los DetallePago del pago basandose en la lista de DetallePagoRegistroRequest.
-     */
-    private void actualizarDetallesPago(Pago pago, List<DetallePagoRegistroRequest> detallesDTO) {
-        log.info("[actualizarDetallesPago] INICIO - Actualizando detalles para pago id={}", pago.getId());
-        log.info("[actualizarDetallesPago] Recibidos {} detalles en la solicitud", detallesDTO.size());
-
-        // Mapea los detalles existentes para actualizacion
-        Map<Long, DetallePago> detallesExistentes = pago.getDetallePagos().stream()
-                .collect(Collectors.toMap(DetallePago::getId, Function.identity()));
-        log.info("[actualizarDetallesPago] Detalles existentes encontrados: {}", detallesExistentes.size());
-
-        List<DetallePago> detallesFinales = detallesDTO.stream()
-                .map(dto -> {
-                    log.info("[actualizarDetallesPago] Procesando detalle DTO id={}", dto.id());
-                    return obtenerODefinirDetallePago(dto, detallesExistentes, pago);
-                })
-                .toList();
-        log.info("[actualizarDetallesPago] Detalles finales generados: {}", detallesFinales.size());
-
-        // Reemplaza la lista actual de detalles por la actualizada
-        pago.getDetallePagos().clear();
-        pago.getDetallePagos().addAll(detallesFinales);
-        log.info("[actualizarDetallesPago] Lista actualizada. Total detalles actuales: {}", pago.getDetallePagos().size());
-
-        // Recalcula el importe de cada detalle
-        pago.getDetallePagos().forEach(detalle -> {
-            log.info("[actualizarDetallesPago] Recalculando importe para detalle id={} (Descripcion: {})",
-                    detalle.getId(), detalle.getDescripcionConcepto());
-            detallePagoServicio.calcularImporte(detalle);
-            log.info("[actualizarDetallesPago] Detalle id={} - aCobrar={}, importePendiente={}",
-                    detalle.getId(), detalle.getACobrar(), detalle.getImportePendiente());
-        });
-        log.info("[actualizarDetallesPago] FIN - Proceso completado para pago id={}", pago.getId());
-    }
-
-    /**
-     * Decide actualizar un DetallePago existente o crear uno nuevo basado en el DTO.
-     */
-    private DetallePago obtenerODefinirDetallePago(DetallePagoRegistroRequest dto,
-                                                   Map<Long, DetallePago> detallesExistentes,
-                                                   Pago pago) {
-        if (dto.id() != null && detallesExistentes.containsKey(dto.id())) {
-            DetallePago detalle = detallesExistentes.get(dto.id());
-            log.info("[obtenerODefinirDetallePago] Actualizando detalle existente id={}", detalle.getId());
-            detalle.setConcepto(dto.conceptoId() != null
-                    ? conceptoRepositorio.findById(dto.conceptoId()).orElse(null)
-                    : null);
-            detalle.setSubConcepto(dto.subConceptoId() != null
-                    ? subConceptoRepositorio.findById(dto.subConceptoId()).orElse(null)
-                    : null);
-            detalle.setValorBase(dto.valorBase());
-            return verificarBonificacion(dto, detalle);
-        } else {
-            log.info("[obtenerODefinirDetallePago] Creando nuevo detalle para conceptoId '{}' y subconceptoId '{}'",
-                    dto.conceptoId(), dto.subConceptoId());
-            DetallePago nuevo = new DetallePago();
-            nuevo.setPago(pago);
-            nuevo.setConcepto(dto.conceptoId() != null
-                    ? conceptoRepositorio.findById(dto.conceptoId()).orElse(null)
-                    : null);
-            nuevo.setSubConcepto(dto.subConceptoId() != null
-                    ? subConceptoRepositorio.findById(dto.subConceptoId()).orElse(null)
-                    : null);
-            nuevo.setValorBase(dto.valorBase());
-            nuevo.setDescripcionConcepto(dto.descripcionConcepto());
-            // Se utiliza aCobrar (en lugar de ACobrar) siguiendo la convencion
-            nuevo.setACobrar((dto.ACobrar() != null && dto.ACobrar() > 0) ? dto.ACobrar() : 0);
-            return verificarBonificacion(dto, nuevo);
-        }
-    }
-
-    /**
-     * Verifica y asigna bonificaciones y recargos al DetallePago segun el DTO recibido.
-     */
-    private DetallePago verificarBonificacion(DetallePagoRegistroRequest dto, DetallePago detalle) {
-        detalle.setBonificacion(dto.bonificacionId() != null
-                ? bonificacionRepositorio.findById(dto.bonificacionId()).orElse(null)
-                : null);
-        if (dto.recargoId() != null) {
-            detalle.setRecargo(recargoRepositorio.findById(dto.recargoId()).orElse(null));
-            detalle.setTieneRecargo(true);
-        }
-        return detalle;
-    }
-
-    /**
-     * Genera la cobranza para un alumno a partir de sus pagos activos pendientes.
-     */
-    public CobranzaDTO generarCobranzaPorAlumno(Long alumnoId) {
-        Alumno alumno = alumnoRepositorio.findById(alumnoId)
-                .orElseThrow(() -> new IllegalArgumentException("Alumno no encontrado."));
-        List<Pago> pagosPendientes = pagoRepositorio
-                .findByAlumnoIdAndEstadoPagoOrderByFechaDesc(alumnoId, EstadoPago.ACTIVO)
-                .stream()
-                .filter(p -> p.getSaldoRestante() != null && p.getSaldoRestante() > 0)
-                .toList();
-        Map<String, Double> conceptosPendientes = new HashMap<>();
-        double totalPendiente = 0.0;
-        for (Pago pago : pagosPendientes) {
-            if (pago.getDetallePagos() != null) {
-                for (DetallePago detalle : pago.getDetallePagos()) {
-                    detalle.setFechaRegistro(pago.getFecha());
-                    detalle.setAlumno(pago.getAlumno());
-                    double pendiente = detalle.getValorBase();
-                    if (pendiente > 0) {
-                        String conceptoDescripcion = (detalle.getConcepto() != null && detalle.getConcepto().getDescripcion() != null)
-                                ? detalle.getConcepto().getDescripcion() : "N/A";
-                        conceptosPendientes.put(conceptoDescripcion,
-                                conceptosPendientes.getOrDefault(conceptoDescripcion, 0.0) + pendiente);
-                        totalPendiente += pendiente;
-                    }
-                }
+    public PagoResponse anularPago(Long pagoId, PagoAnulacionRequest request, Usuario principal) {
+        Pago pago = pagos.findByIdForUpdate(pagoId)
+                .orElseThrow(() -> new EntityNotFoundException("Pago no encontrado"));
+        if (pago.getEstado() == EstadoPago.ANULADO) {
+            if (request.idempotencyKey().equals(pago.getReversalIdempotencyKey())) {
+                return respuesta(pago);
             }
+            throw new OperacionNoPermitidaException("El pago ya fue anulado");
         }
-        List<DetalleCobranzaDTO> detalles = conceptosPendientes.entrySet().stream()
-                .map(e -> new DetalleCobranzaDTO(e.getKey(), e.getValue()))
-                .collect(Collectors.toList());
-        log.info("[generarCobranzaPorAlumno] Alumno id={} tiene total pendiente: {} con detalles: {}",
-                alumnoId, totalPendiente, detalles);
-        return new CobranzaDTO(alumno.getId(),
-                alumno.getNombre() + " " + alumno.getApellido(),
-                totalPendiente,
-                detalles);
-    }
 
-    /**
-     * Quita manualmente el recargo de cada DetallePago de un pago y recalcula importes.
-     */
-    @Transactional
-    public PagoResponse quitarRecargoManual(Long id) {
-        Pago pago = pagoRepositorio.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Pago no encontrado."));
-        if (pago.getDetallePagos() != null) {
-            for (DetallePago detalle : pago.getDetallePagos()) {
-                detalle.setFechaRegistro(pago.getFecha());
-                detalle.setConcepto(detalle.getConcepto());
-                detalle.setSubConcepto(detalle.getSubConcepto());
-                detalle.setAlumno(pago.getAlumno());
-                detalle.setRecargo(null);
-                detalle.setTieneRecargo(false);
-                detallePagoServicio.calcularImporte(detalle);
-            }
+        Usuario usuario = usuarioActivo(principal);
+        alumnos.findActivoByIdForUpdate(pago.getAlumno().getId())
+                .orElseThrow(() -> new OperacionNoPermitidaException("El alumno está inactivo"));
+
+        List<AplicacionPago> activas = aplicaciones.findByPagoIdAndEstadoOrderById(
+                pagoId, EstadoAplicacionPago.APLICADA);
+        List<Cargo> cargosBloqueados = activas.isEmpty()
+                ? List.of()
+                : cargos.findAllByIdForUpdate(activas.stream().map(a -> a.getCargo().getId()).sorted().toList());
+        if (cargosBloqueados.size() != activas.size()) {
+            throw new IllegalStateException("No fue posible bloquear todos los cargos del pago");
         }
-        assert pago.getDetallePagos() != null;
-        double nuevoMonto = pago.getDetallePagos().stream()
-                .mapToDouble(DetallePago::getImportePendiente)
-                .sum();
-        pago.setMonto(nuevoMonto);
-        double sumPagosPrevios = 0;
-        pago.setSaldoRestante(nuevoMonto - sumPagosPrevios);
-        paymentProcessor.verificarSaldoRestante(pago);
-        Pago actualizado = pagoRepositorio.save(pago);
-        return pagoMapper.toDTO(actualizado);
+
+        List<MovimientoCredito> creditosPago = movimientosCredito.findByPagoId(pagoId).stream()
+                .filter(m -> m.getTipo() == TipoMovimientoCredito.GENERACION)
+                .toList();
+        BigDecimal creditoGenerado = creditosPago.stream()
+                .map(MovimientoCredito::getImporte).reduce(CERO, BigDecimal::add);
+        if (creditoGenerado.signum() > 0
+                && movimientosCredito.saldoByAlumnoId(pago.getAlumno().getId()).compareTo(creditoGenerado) < 0) {
+            throw new OperacionNoPermitidaException("El crédito generado por el pago ya fue consumido");
+        }
+
+        for (AplicacionPago aplicacion : activas) {
+            aplicacion.setEstado(EstadoAplicacionPago.REVERTIDA);
+            aplicacion.setMotivoReversion(request.motivo());
+            aplicacion.setFechaReversion(clock.instant());
+        }
+        aplicaciones.flush();
+        for (Cargo cargo : cargosBloqueados) {
+            cargoServicio.actualizarEstado(cargo);
+        }
+
+        MovimientoCaja original = movimientosCaja.findByPagoIdAndTipo(pagoId, TipoMovimientoCaja.INGRESO_PAGO)
+                .orElseThrow(() -> new IllegalStateException("El pago no posee movimiento de caja"));
+        MovimientoCaja reversoCaja = new MovimientoCaja();
+        reversoCaja.setTipo(TipoMovimientoCaja.REVERSO);
+        reversoCaja.setFecha(LocalDate.now(clock));
+        reversoCaja.setImporte(original.getImporte());
+        reversoCaja.setMetodoPago(original.getMetodoPago());
+        reversoCaja.setPago(pago);
+        reversoCaja.setMovimientoRevertido(original);
+        reversoCaja.setUsuario(usuario);
+        reversoCaja.setIdempotencyKey("anulacion-pago:" + request.idempotencyKey());
+        reversoCaja.setMotivo(request.motivo());
+        movimientosCaja.save(reversoCaja);
+
+        for (MovimientoCredito originalCredito : creditosPago) {
+            MovimientoCredito reversoCredito = new MovimientoCredito();
+            reversoCredito.setAlumno(pago.getAlumno());
+            reversoCredito.setTipo(TipoMovimientoCredito.REVERSO);
+            reversoCredito.setImporte(originalCredito.getImporte());
+            reversoCredito.setPago(pago);
+            reversoCredito.setMovimientoRevertido(originalCredito);
+            reversoCredito.setUsuario(usuario);
+            reversoCredito.setIdempotencyKey("anulacion-credito:" + request.idempotencyKey());
+            reversoCredito.setMotivo(request.motivo());
+            movimientosCredito.save(reversoCredito);
+        }
+
+        pago.setEstado(EstadoPago.ANULADO);
+        pago.setMotivoAnulacion(request.motivo());
+        pago.setFechaAnulacion(clock.instant());
+        pago.setReversalIdempotencyKey(request.idempotencyKey());
+        log.info("Pago anulado id={} alumnoId={}", pago.getId(), pago.getAlumno().getId());
+        return respuesta(pago);
     }
 
-    /**
-     * Actualiza los importes del pago basandose en la suma de los importes pendientes de sus detalles.
-     */
-    private void actualizarImportesPagoParcial(Pago pago) {
-        log.info("[actualizarImportesPagoParcial] Actualizando importes para pago id={}", pago.getId());
-        double totalPendiente = pago.getDetallePagos().stream()
-                .mapToDouble(det -> Optional.ofNullable(det.getImportePendiente()).orElse(0.0))
-                .sum();
-        log.info("[actualizarImportesPagoParcial] Total pendiente de detalles: {}", totalPendiente);
-        pago.setSaldoRestante(totalPendiente);
-        paymentProcessor.verificarSaldoRestante(pago);
-        log.info("[actualizarImportesPagoParcial] Pago actualizado: saldoRestante={}", pago.getSaldoRestante());
-    }
-
-    /**
-     * Obtiene un pago por su ID y genera su DTO.
-     */
+    @Transactional(readOnly = true)
     public PagoResponse obtenerPagoPorId(Long id) {
-        Pago pago = pagoRepositorio.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Pago no encontrado."));
-        return pagoMapper.toDTO(pago);
+        return respuesta(pagos.findById(id).orElseThrow(() -> new EntityNotFoundException("Pago no encontrado")));
     }
 
-    /**
-     * Lista todos los pagos que no esten anulados.
-     */
-    public List<PagoResponse> listarPagos() {
-        return pagoRepositorio.findAll()
-                .stream()
-                .filter(p -> p.getEstadoPago() != EstadoPago.ANULADO)
-                .map(pagoMapper::toDTO)
-                .collect(Collectors.toList());
-    }
-
-    /**
-     * Elimina un pago marcandolo como ANULADO.
-     */
-    @Transactional
-    public void eliminarPago(Long id) {
-        Pago pago = pagoRepositorio.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Pago no encontrado."));
-        pago.setEstadoPago(EstadoPago.ANULADO);
-        if (pago.getDetallePagos() != null) {
-            pago.getDetallePagos().forEach(detalle -> detalle.setPago(pago));
-        }
-        paymentProcessor.verificarSaldoRestante(pago);
-        pagoRepositorio.save(pago);
-    }
-
-    /**
-     * Lista los pagos de un alumno (excluyendo los anulados) ordenados por fecha descendente.
-     */
+    @Transactional(readOnly = true)
     public List<PagoResponse> listarPagosPorAlumno(Long alumnoId) {
-        return pagoRepositorio.findByAlumnoIdAndEstadoPagoNotOrderByFechaDesc(alumnoId, EstadoPago.ANULADO)
-                .stream()
-                .map(pagoMapper::toDTO)
-                .collect(Collectors.toList());
+        return pagos.findByAlumnoIdOrderByFechaDescIdDesc(alumnoId).stream().map(this::respuesta).toList();
     }
 
-    public List<PagoResponse> listarPagosVencidos() {
-        return pagoRepositorio.findPagosVencidos(LocalDate.now(clock), EstadoPago.ACTIVO)
-                .stream()
-                .map(pagoMapper::toDTO)
+    private Usuario usuarioActivo(Usuario principal) {
+        if (principal == null || principal.getId() == null) {
+            throw new OperacionNoPermitidaException("Usuario autenticado requerido");
+        }
+        return usuarios.findById(principal.getId())
+                .filter(u -> Boolean.TRUE.equals(u.getActivo()))
+                .orElseThrow(() -> new OperacionNoPermitidaException("El usuario está inactivo"));
+    }
+
+    private void validarCargo(Alumno alumno, Cargo cargo) {
+        if (!cargo.getAlumno().getId().equals(alumno.getId())) {
+            throw new OperacionNoPermitidaException("El cargo no pertenece al alumno del pago");
+        }
+        if (cargo.getEstado() == EstadoCargo.ANULADO || cargo.getEstado() == EstadoCargo.PAGADO) {
+            throw new OperacionNoPermitidaException("El cargo " + cargo.getId() + " no admite aplicaciones");
+        }
+    }
+
+    private PagoResponse validarReintento(Pago pago, String hash) {
+        if (!pago.getRequestHash().equals(hash)) {
+            throw new OperacionNoPermitidaException("La idempotency key ya fue usada con otro contenido");
+        }
+        return respuesta(pago);
+    }
+
+    private PagoResponse respuesta(Pago pago) {
+        List<AplicacionPagoResponse> detalle = aplicaciones.findByPagoIdOrderById(pago.getId()).stream()
+                .map(a -> new AplicacionPagoResponse(
+                        a.getId(),
+                        a.getCargo().getId(),
+                        decimal(a.getImporteAplicado()),
+                        a.getEstado().name(),
+                        decimal(cargoServicio.saldo(a.getCargo()))))
                 .toList();
+        BigDecimal credito = movimientosCredito.findByPagoId(pago.getId()).stream()
+                .map(m -> m.getTipo() == TipoMovimientoCredito.GENERACION ? m.getImporte() : m.getImporte().negate())
+                .reduce(CERO, BigDecimal::add);
+        return new PagoResponse(
+                pago.getId(), pago.getAlumno().getId(), pago.getMetodoPago().getId(), pago.getUsuario().getId(),
+                pago.getFecha(), decimal(pago.getMontoRecibido()), pago.getEstado().name(), pago.getIdempotencyKey(),
+                pago.getObservaciones(), decimal(credito), detalle);
     }
 
-    /**
-     * Obtiene el ultimo pago pendiente de un alumno.
-     */
-    public PagoResponse obtenerUltimoPagoPorAlumno(Long alumnoId) {
-        Pago pago = paymentProcessor.obtenerUltimoPagoPendienteEntidad(alumnoId);
-        return pago != null ? pagoMapper.toDTO(pago) : null;
+    private static BigDecimal monedaPositiva(String valor, String campo) {
+        try {
+            BigDecimal normalizado = new BigDecimal(valor).setScale(2, RoundingMode.UNNECESSARY);
+            if (normalizado.signum() <= 0) {
+                throw new IllegalArgumentException(campo + " debe ser mayor que cero");
+            }
+            return normalizado;
+        } catch (ArithmeticException | NumberFormatException e) {
+            throw new IllegalArgumentException(campo + " debe tener como máximo dos decimales");
+        }
     }
 
+    private static String decimal(BigDecimal valor) {
+        return valor.setScale(2, RoundingMode.UNNECESSARY).toPlainString();
+    }
+
+    private static String hash(PagoRegistroRequest request) {
+        String aplicaciones = request.aplicaciones().stream()
+                .sorted(Comparator.comparing(AplicacionPagoRequest::cargoId))
+                .map(a -> a.cargoId() + ":" + monedaPositiva(a.importe(), "aplicaciones.importe").toPlainString())
+                .reduce((a, b) -> a + "," + b).orElse("");
+        String canonico = request.alumnoId() + "|" + request.metodoPagoId() + "|"
+                + monedaPositiva(request.montoRecibido(), "montoRecibido").toPlainString() + "|"
+                + aplicaciones + "|" + request.generarCredito() + "|"
+                + (request.observaciones() == null ? "" : request.observaciones());
+        try {
+            return HexFormat.of().formatHex(MessageDigest.getInstance("SHA-256")
+                    .digest(canonico.getBytes(StandardCharsets.UTF_8)));
+        } catch (NoSuchAlgorithmException e) {
+            throw new IllegalStateException("SHA-256 no disponible", e);
+        }
+    }
 }
